# timestamp

./: .gitignore  .local.dev.env.example  Dockerfile  Makefile  README.md  docker-compose.local.dev.yml  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: build.yml
.init/: 0-schema.sql  1-inserts.sql
docs/site/: 404.html  index.html
docs/site/markdown/: index.html
tests/unit/: conftest.py
tests/unit/services/: test_user_service.py
tests/unit/utils/: test_hashing.py  test_validation.py
timestamp/: main.py
timestamp/core/: config.py
timestamp/db/: database.py  storage.py
timestamp/db/models/: __init__.py  attendance.py  base.py  employee.py  role.py  user.py
timestamp/dependencies/: __init__.py  auth.py  db.py  services.py  storage.py
timestamp/routes/: __init__.py  auth.py  health.py  image.py  root.py  timestamp.py  user.py
timestamp/schemas/: __init__.py  annotations.py  attendance.py  common.py  enums.py  image.py  user.py
timestamp/services/: __init__.py  attendance.py  image.py  user.py
timestamp/utils/: hashing.py  validation.py
timestamp/utils/errors/: __init__.py  attendance.py  employee.py  user.py
