[project]
name = "timestamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "zensical>=0.0.27",
]

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=timestamp tests/ --cov-report html"

[project.scripts]
app = "timestamp.main:app"
