[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "timestamp"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.78",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "zensical>=0.0.27",
]

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=timestamp tests/ --cov-report html"

[tool.pytest_env]
MODE = "development"
DATABASE_URL = "postgresql+psycopg2://timestamp:password@localhost:5432/timestamp"
JWT_SECRET_KEY = "4e9db3a3f86d82cb45f552b9e24e7a652fbb5d3565a3f60a798f904cee6b235b"
JWT_ALGORITHM = "HS256"
JWT_EXPIRATION_MINUTES = 525600
S3_ENDPOINT_URL = "http://localhost:9000"
S3_ACCESS_KEY = "minioadmin"
S3_SECRET_KEY = "minioadmin"
S3_BUCKET_NAME = "timestamp-test"

[project.scripts]
app = "timestamp.main:app"
